force-app/main/default/staticresources/python/Disappear/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_User__c</fullName>
        <description>Identifies whether the user associated to the contact record is active or inactive</description>
        <formula>UserId__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <label>Alias</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Nickname__c</fullName>
        <label>Community Nickname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <description>Amgen Employee Cost Center</description>
        <label>Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country Picklist</description>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balkans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia &amp; Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central And Eastern Europe (CEE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyprus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominican Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecuador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egypt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <label>Degree</label>
        <picklist>
            <picklistValues>
                <fullName>APRN - Advanced Practice Regd. Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNS - Certified Nurse Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC -  Doctor of Chiropractic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDS - Doctor of Dental Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMD - Doctor of Medical Dentistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DO -  Doctor of Osteopathy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPM - Doctor of Podiatric Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD -  Medical Doctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP -  Nurse Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OD - Optometrists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA -  Physician Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PharmD - Doctor of Pharmacology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RD - Registered Dietitian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN -  Registered Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RPh - Registered Pharmacist</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailEncodingKey__c</fullName>
        <label>EmailEncodingKey</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emp_Type__c</fullName>
        <description>This field is used to identify Amgen Internal or External Contact.</description>
        <label>Employee Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contingent Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ext Bus Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EmployeeNumber__c</fullName>
        <label>EmployeeNumber</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmploymentStatusCode__c</fullName>
        <label>EmploymentStatusCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <label>Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federation_Identifier__c</fullName>
        <label>Federation Identifier</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Active_US_license__c</fullName>
        <defaultValue>false</defaultValue>
        <description>field used for checking whether the user is having active US based user license</description>
        <label>Has Active US license</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUserActive__c</fullName>
        <formula>UserId__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsUserActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Isselected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for author</description>
        <label>Isselected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LanguageLocaleKey__c</fullName>
        <label>LanguageLocaleKey</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalSidKey__c</fullName>
        <label>LocalSidKey</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <label>Location Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prescriber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prescriber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <formula>UserId__r.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proxy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proxy</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Proxy (Contact)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublicationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Reason behind manual change of Has US Based License</description>
        <inlineHelpText>Reason behind manual change of Has US Based License</inlineHelpText>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receives_Info_Emails_Specified__c</fullName>
        <label>Receives Info Emails Specified</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receives_Info_Emails__c</fullName>
        <label>Receives Info Emails</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restrict_Enbrel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enbrel access will be controlled by Role Based Sharing in publication
iPubTeam &amp; iWriting roles cannot EDIT Publications with isEnbrel__c checked.</description>
        <label>Restrict Enbrel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReviewerRole_c__c</fullName>
        <label>ReviewerRole</label>
        <picklist>
            <picklistValues>
                <fullName>To be decided</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <formula>UserId__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <description>Specialty of the Author Contact</description>
        <label>Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>ALLERGY &amp; IMMUNOLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARDIOVASCULAR DISEASE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DERMATOLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIABETES &amp; METABOLISM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENDOCRINOLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPIDEMIOLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GASTROENTEROLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GENERAL SURGERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GERIATRICS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEMATOLOGY/ONCOLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEMATOLOGY (INTERNAL MEDICINE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMMUNOLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERNAL MEDICINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDICAL ONCOLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEPHROLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NUCLEAR MEDICINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBSTETRICS &amp; GYNECOLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEDIATRIC HEMATOLOGY/ONCOLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEDIATRICS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PUBLIC HEALTH &amp; GENERAL PREVENTIVE MED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PULMONARY DISEASE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RADIATION ONCOLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RADIOLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RHEUMATOLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SURGICAL ONCOLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UROLOGY</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SponsoringDept__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>An external contact&apos;s sponsoring department</description>
        <inlineHelpText>An external contact&apos;s sponsoring department</inlineHelpText>
        <label>Sponsoring Dept</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Sponsored Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TimeZoneSidKey__c</fullName>
        <label>TimeZoneSidKey</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Used to distinguish between the different types of contacts that are loaded - via data load vs SAP integration and set up in APPEAR Roles.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>APPEAR</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siebel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isFlaggedForDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The release 2.0 migration process will delete &apos;extra&apos; contact field after merging user logins together.
All contacts to deleted will be flagged by the migration process.
Then Sys Admin will review and perform final delete on these records.</description>
        <label>isFlaggedForDelete</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.DEPARTMENT</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>Role__c</columns>
        <columns>Active_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_SapC</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.DEPARTMENT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Country__c</columns>
        <columns>Emp_Type__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Internal_Contact</value>
        </filters>
        <label>All SAP Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_missing_Fed_IDs</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.DEPARTMENT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Federation_Identifier__c</columns>
        <columns>UserName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>equals</operation>
        </filters>
        <label>All missing Email</label>
    </listViews>
    <listViews>
        <fullName>All_missing_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.DEPARTMENT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>UserId__c</columns>
        <columns>UserName__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Federation_Identifier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UserId__c</field>
            <operation>equals</operation>
        </filters>
        <label>All missing Users</label>
    </listViews>
    <listViews>
        <fullName>All_non_blank_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.DEPARTMENT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UserId__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All non-blank Users</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Appear_Contact</fullName>
        <active>true</active>
        <description>Used for contacts pulled from existing siebal system that are &quot;complete&quot;, such as good Author names, etc AND to add contacts as needed for new authors or vendor contacts related to the pub</description>
        <label>Appear Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Contact</fullName>
        <active>true</active>
        <description>SAP system or HR system loading of Amgen employees or internal contacts</description>
        <label>Internal Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Modify_INTERNAL_Contact</fullName>
        <active>true</active>
        <description>This validation rule will not allow editing of internal contacts</description>
        <errorConditionFormula>AND(OR( 
ISCHANGED(FirstName), 
ISCHANGED(LastName)), 
CONTAINS(RecordType.Name, &apos;Internal Contact&apos;), 
NOT(ISNEW()),
NOT(OR(CONTAINS($Profile.Name, &apos;Admin&apos;), $Profile.Name = &apos;APPEAR Integration&apos;))
)</errorConditionFormula>
        <errorMessage>Users cannot modify Internal Contacts in APPEAR as the data is loaded by SAP Interface</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_First_Name_Mandatory</fullName>
        <active>true</active>
        <description>This rule is written to make first name of contact mandatory.</description>
        <errorConditionFormula>ISBLANK( FirstName ) &amp;&amp;  $Profile.Name !=&apos;APPEAR Integration&apos; &amp;&amp;  $Profile.Name != &apos;APPEAR Reporting&apos;</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>First Name is Mandatory</errorMessage>
    </validationRules>
</CustomObject>